# Data-Science-and-Machine-Learning

./: README.md  example.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: feature_request.md
.github/ISSUE_TEMPLATE/workflows/: tests.yml
.github/workflows/: tests.yml
Supervised Learning/Decision Trees/: README.md  decision_tree.ipynb
Supervised Learning/KNN/: README.md  knn_from_scratch.ipynb
Supervised Learning/Perceptron/: README.md  perceptron_from_scratch.ipynb
Unsupervised Learning/DBSCAN/: README.MD  dbscan.ipynb
Unsupervised Learning/K-means/: README.md  k_mean_from_scratch.ipynb
Unsupervised Learning/PCA/: README.md  pca.ipynb
examples/: README.md
examples/Supervised Learning/: README.md
examples/Unsupervised Learning/: README.md
other/unit/: test_preprocess.py
src/: README.md
src/mlpackage/: __init__.py  algorithms.py  decision_tree.py  kmeans.py  knn.py  label_propogation.py  linear_regression.py  logistic_regression.py  metrics.py  multilayer_perceptron.py  perceptron.py  preprocess.py
src/rice2025/: __init__.py  knn.py  metrics.py  postprocess.py  preprocess.py
tests/: test_dbscan.py  test_decision_tree.py  test_decision_tree_classifier.py  test_decision_tree_regressor.py  test_kmeans.py  test_knn.py  test_layer_propogation.py  test_linear_regression.py  test_logistic_regression.py  test_metrics.py  test_mlp.py  test_pca.py  test_perceptron.py  test_preprocess.py
tests/integration/: test_full_pipeline.py
tests/unit/: test_knn.py  test_metrics.py  test_postprocess.py
(+32 files in other folders)
